# fe

./: .floo  .gitignore  Cargo.toml  LICENSE  README.md  foo.sh
src/: cli.yaml  display.rs  fileinfo.rs  find.rs  ignore.rs  log.rs  main.rs
