[package]
name = "fe"
version = "1.0.3"
authors = ["Bjorn Tipling <bjorn@ambientchill.com>"]
description = "Fe is a sophisticated, yet simple to use file listing utility. Use Fe to list files in a directory or to recursively find files by their names using a fuzzy pattern. Fe's speeds are comparable to find, and often times faster."
documentation = "https://github.com/btipling/fe/blob/master/README.md"
homepage = "https://github.com/btipling/fe"
license = "Apache-2.0"

[dependencies]
clap = { version = "~2.19.0", features = ["yaml"] }
glob = "0.2.11"
regex = "0.2"
term-painter = "0.2.3"
